Final Commit Tutorial5

--- a/pages/templates/pages/base.html
+++ b/pages/templates/pages/base.html
@@ -27,7 +27,7 @@
                 <a class="nav-link active" href="{% url 'about' %}">About</a>
                 <a class="nav-link active" href="{% url 'contact' %}">Contact</a>
                 <a class="nav-link active" href="{% url 'products' %}">Products</a>
-                <a class="nav-link active" href="{% url 'form' %}">Create Product</a>
+                <a class="nav-link active" href="{% url 'product-create' %}">Create Product</a>
             </div>
         </div>
     </div>
